# meal-plan

./: .gitignore  rpiservo.py  testing.py  tf2controlNode.py  tf2webcamNode.py  tf2webcamTest.py
cad/: BASE.SLDPRT  Joint 1 bracket.SLDPRT  Plate.SLDPRT  j2.SLDPRT  j3.SLDPRT  j3to4 bracketr.SLDPRT  pear cam for j1.SLDPRT
cad/Gripper/: Bolt5.SLDPRT  Bolt6.SLDPRT  GEAR  3.SLDPRT  Gear 1.SLDPRT  Gear 2.SLDPRT  Gripper part 1.SLDPRT  Nut for bolt 6.SLDPRT  Part6.SLDPRT  SERVO motor - Copy.SLDPRT  Servo shaft.SLDPRT  grip part 3.SLDPRT  gripper part 2.SLDPRT  gripper part 4.SLDPRT  pin 3.SLDPRT  pin.SLDPRT  pin1.SLDPRT  servo.SLDASM  source.txt
cad/MG996R Servo Motor/: Case.SLDPRT  Output Shaft.SLDPRT  Pan Head Cross Screw M1.6.SLDPRT  Pan Head Cross Screw M3.SLDPRT  Rubber Wire Cable Sleeve.SLDPRT  Servo Horns no holes.SLDPRT  Servo Horns.SLDPRT  source.txt
log/: latest_build
my_package/: CMakeLists.txt  package.xml  setup.py
my_package/msg/: Steps.msg
my_package/my_package/: controlNode.py  planningNode.py  webcamNode.py
my_package/srv/: DetectIngredients.srv  GenerateRecipe.srv  detectIngredients.srv
src/my_package/: CMakeLists.txt  package.xml  setup.py
src/my_package/launch/: autocook_system.launch.py
src/my_package/msg/: Ingredients.msg
src/my_package/my_package/: controlNode.py  motionControlNode.py  planningNode.py  webcamNode.py  webcamTest.py
src/my_package/srv/: DetectIngredients.srv  ExecuteGrip.srv  GenerateRecipe.srv  MoveToPosition.srv  SetTool.srv
